--- a/app/views/antigen/v2/global-registration/fingerprick-test.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Would you be willing to take an antibody test?" %}
+{% set pageTitle = "Would they also be willing to take 2 separate antibody tests?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -25,14 +25,14 @@
           <fieldset class="govuk-fieldset" aria-describedby="fingerprick-test-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
-                Would {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }} also be willing to take a separate antibody test?
+                Would {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }} also be willing to take 2 separate antibody tests?
               </h1>
             </legend>
             <span id="fingerprick-test-hint" class="govuk-body">
-              The antibody test will help the NHS learn more about who's had the virus more than once, and how it has spread.<br><br>
-              If they agree to do antiboody testing, they will:<br><br>
+              The antibody tests will help the NHS learn how likely people are to get COVID-19 a second time or after a vaccination, and the impact of variants.<br><br>
+              If they agree to antibody testing, they will:<br><br>
               <ul class="govuk-list govuk-list--bullet">
-                <li>only be sent an antibody test if they test positive for coronavirus</li>
+                <li>only be sent an antibody test if they test positive for COVID-19</li>
                 <li>be posted 2 antibody tests 3 weeks apart to their home address</li>
                 <li>do a fingerprick blood test on themselves at home</li>
                 <li>need to post back the completed antibody test</li>
@@ -40,27 +40,27 @@
               </ul>
             </span>
 
+            <div class="govuk-warning-text govuk-!-margin-top-7">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                By selecting Yes you confirm that they are OK doing a fingerprick blood test, and do not take anticoagulants ('blood-thinning' medicines) or  have a blood clotting disorder such as haemophilia. 
+              </strong>
+            </div>
+
             <div class="govuk-radios govuk-!-margin-top-7">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="fingerprick-test-1" name="fingerprick-test" type="radio" value="Yes" {{ checked("fingerprick-test", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="fingerprick-test-1">
-                  Yes, they are willing to do an antibody test
+                  Yes, they are willing to do the antibody tests
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="fingerprick-test-2" name="fingerprick-test" type="radio" value="No" {{ checked("fingerprick-test", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="fingerprick-test-2">
-                  No, they are not willing to do an antibody test
+                  No, they are not willing to do the antibody tests
                 </label>
               </div>
-            </div>
-
-            <div class="govuk-warning-text govuk-!-margin-top-7">
-              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-              <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                By selecting Yes you confirm that you are OK doing a fingerprick blood test, and do not take anticoagulants ('blood-thinning' medicines) or  have a blood clotting disorder such as haemophilia. 
-              </strong>
             </div>
 
             <details class="govuk-details govuk-!-margin-bottom-2 govuk-!-margin-top-6" data-module="govuk-details">
