--- a/app/views/antigen/v2/site-appointment-booking/confirmation.html
+++ b/app/views/antigen/v2/site-appointment-booking/confirmation.html
@@ -18,36 +18,36 @@ set version = "v2" %}
               Lee Valley Athletics Centre<br>
               London<br>
               N9 0AR
-            {% endif %}
-            {% if data['test-site'] == "Greenwich" %}
+            {% elseif data['test-site'] == "Greenwich" %}
               Greenwich (drive in only - no motorbikes)<br>
               TFL Car Park, Edmund Halley Way<br>
               London<br>
               SE10 0PH
-            {% endif %}
-            {% if data['test-site'] == "Twickenham" %}
+            {% elseif data['test-site'] == "Twickenham" %}
               Twickenham (drive in only - no motorbikes)<br>
               Twickenham Stadium, 200 Whitton Road, Gate D<br>
               Twickenham<br>
               TW1 1DZ
-            {% endif %}
-            {% if data['test-site'] == "Haringey Stamford Hill" %}
+            {% elseif data['test-site'] == "Haringey Stamford Hill" %}
               Haringey Stamford Hill - Walk through site<br>
               Stamford Hill Primary School<br>
               Haringey<br>
               N15 6HD
-            {% endif %}
-            {% if data['test-site'] == "Hackney Sandford Court" %}
+            {% elseif data['test-site'] == "Hackney Sandford Court" %}
               Hackney Sandford Court - Walk through site<br>
               Sandford Court, Bethune Rd<br>
               London<br>
               N16 5BB
-            {% endif %}
-            {% if data['test-site'] == "Camden Ramsay Hall" %}
+            {% elseif data['test-site'] == "Camden Ramsay Hall" %}
               Camden Ramsay Hall - Walk through site<br>
               Ramsay Hall (No step free access)<br>
               Camden<br>
               W1T 5HB
+            {% else %}
+              Heathrow airport test site, 
+              125 testing lane, 
+              London, 
+              RM4 3RS
             {% endif %}
         </strong>
       </p>
@@ -55,7 +55,7 @@ set version = "v2" %}
         {% if data['vehicle-registration-number'] !== undefined %}
         <span class="govuk-!-margin-right-3">Vehicle: {{ data['vehicle-registration-number'] or 'CU57ABC' }}</span>
         {% endif %}
-        <span class="govuk-!-margin-right-3">Date: {{ data['appointment-date'] or '30 October' }} 2020</span>
+        <span class="govuk-!-margin-right-3">Date: {{ data['appointment-date'] or '18 July' }} 2021</span>
         <span>Time: {{ data['time'] or '9:30am to 10:00am' }}</span>
       </p>
 
@@ -137,18 +137,9 @@ set version = "v2" %}
 
     <h3 class="govuk-heading-s">At walk-through sites:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>you can choose to go by foot, bike or car (parking may not be available on the site)</li>
-      <!-- <li>wear a face covering</li> -->
+      <li>you can choose to go by foot, bike or car (parking may not be available on site)</li>
       <li>you can ask for a staff member to guide you as you do the test yourself</li>
     </ul>
-
-    <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text govuk-!-font-size-19">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        At a walk-through test site everyone must wear a face covering, even if they are normally exempt, except children under the age of 3 (or under the age of 5 in Scotland).
-      </strong>
-    </div> -->
 
     <h3 class="govuk-heading-s">At drive-through sites:</h3>
     <ul class="govuk-list govuk-list--bullet">
@@ -176,12 +167,9 @@ set version = "v2" %}
 
     <h3 class="govuk-heading-m">Antibody testing</h3>
     <p class="govuk-body">
-      If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. You can leave home to post a test kit while self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
+      If you test positive for COVID-19 and agreed to do antibody testing, you will receive your first antibody test kit in the post 2 to 3 days after getting your positive result. Your second antibody test will arrive 3 weeks later.<br><br>
+      The kit contains clear instructions on how to do the test. It's important you do the test and post it back <strong>as soon as possible</strong>. You can leave home to post a test kit while self-isolating. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.
     </p>
-
-    <!-- <h2 class="govuk-heading-m">Do you need a BSL interpreter?</h2>
-
-    <p class="govuk-body">If you are Deaf and need a BSL interpreter during your drive-through test, <a href="#">download the free InterpreterNow app</a> before you appointment.</p> -->
 
     <h2 class="govuk-heading-m">Help us improve our service</h2>
 
