--- a/app/views/litereg-accounts/v3/address.html
+++ b/app/views/litereg-accounts/v3/address.html
@@ -1,5 +1,5 @@
 {% set version = "v3" %}
-{% set pageTitle = "What is the address registered with your GP?" %}
+{% set pageTitle = "What is your postcode?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -32,27 +32,23 @@
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
                 {% if data['whos-taking-the-test'] == "someone-else" %}
-                What is the home address registered with {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }}'s GP?
+                What is their postcode?
                 {% else %}
                 {{ pageTitle }}
                 {% endif %}
               </h1>
             </legend>
-    
+
             <span id="post-code-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
-              This will help us find and update their GP record with their test result.
+              <strong>Enter the postcode that is registered with their GP.</strong>
+              This will help us find and update the GP record with their result.<br><br>
+              If they're not registered with a GP in the UK, that's OK. Enter the address and the postcode where they're staying instead.
               {% else %}
-              This will help us find and update your GP record with your test result.
+              <strong>Enter the postcode that is registered with your GP.</strong><br>
+              This will help us find and update the GP record with your result.<br><br>
+              If you're not registered with a GP in the UK, that's OK. Enter the address and the postcode where you're staying instead.
               {% endif %}
-              <br><br>
-              
-              {% if data['whos-taking-the-test'] == "someone-else" %}
-              If they're not registered with a doctor in the UK, that's OK. Enter the address and postcode where they're staying instead.
-              {% else %}
-              If you're not registered with a doctor in the UK, that's OK. Enter the address and postcode where you're staying instead.
-              {% endif %}
-              
             </span>
             <div class="govuk-form-group govuk-!-margin-top-6">
               <label class="govuk-label govuk-!-margin-bottom-3" for="gp-postcode" style="line-height: 0.8;">
@@ -60,9 +56,9 @@
               </label>
               <input class="govuk-input govuk-input--width-10" id="gp-postcode" name="gp-postcode" type="text" autocomplete="postal-code" value="{{ data['gp-postcode'] }}" autofocus>
             </div>
-            <!-- <p class="govuk-body">
+            <p class="govuk-body">
               <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">Enter address manually</a>
-            </p> -->
+            </p>
             <button id="find-address" class="govuk-button" type="submit" data-module="govuk-button">Find address</button>
           </div>
 
@@ -70,27 +66,23 @@
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
                 {% if data['whos-taking-the-test'] == "someone-else" %}
-                What is the home address registered with {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }}'s GP?
+                What is their address?
                 {% else %}
-                {{ pageTitle }}
+                What is your address?
                 {% endif %}
               </h1>
             </legend>
-    
+
             <span id="post-code-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
-              This will help us find and update their GP record with their test result.
+              <strong>Select the address that is registered with their GP.</strong>
+              This will help us find and update the GP record with their result.<br><br>
+              If they're not registered with a GP in the UK, that's OK. Enter the address and the postcode where they're staying instead.
               {% else %}
-              This will help us find and update your GP record with your test result.
+              <strong>Select the address that is registered with your GP.</strong><br>
+              This will help us find and update the GP record with your result.<br><br>
+              If you're not registered with a GP in the UK, that's OK. Enter the address and the postcode where you're staying instead.
               {% endif %}
-              <br><br>
-              
-              {% if data['whos-taking-the-test'] == "someone-else" %}
-              If they're not registered with a doctor in the UK, that's OK. Enter the address and postcode where they're staying instead.
-              {% else %}
-              If you're not registered with a doctor in the UK, that's OK. Enter the address and postcode where you're staying instead.
-              {% endif %}
-              
             </span>
             <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
               <strong class="govuk-!-font-size-24">Postcode</strong><br><br>
@@ -113,9 +105,16 @@
                 <option value="5 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}">5 Souterhead Road, London, {{ data['gp-postcode'] or 'LS1 3BE' }}</option>
               </select>
             </div>
+            {% if data['whos-taking-the-test'] == "someone-else" %}
             <p class="govuk-body">
-              <a class="govuk-link govuk-!-font-size-19" id="manual-address-2" role="button" href="#">I cannot find the address in this list</a>
+              <a class="govuk-link govuk-!-font-size-19" id="manual-address-2" role="button" href="#">I cannot find their address in the list</a>
             </p>
+            {% else %}
+            <p class="govuk-body">
+              <a class="govuk-link govuk-!-font-size-19" id="manual-address-2" role="button" href="#">I cannot find my address in the list</a>
+            </p>
+            {% endif %}
+            
             <button id="button-hidden" class="govuk-button govuk-!-margin-top-4" type="submit" data-module="govuk-button">
               Continue
             </button>
@@ -125,7 +124,7 @@
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
                 {% if data['whos-taking-the-test'] == "someone-else" %}
-                What is the home address registered with {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }}'s GP?
+                What is their address?
                 {% else %}
                 {{ pageTitle }}
                 {% endif %}
@@ -134,30 +133,16 @@
     
             <span id="post-code-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
-              This will help us find and update their GP record with their test result.
+              <strong>Enter the address that is registered with their GP.</strong>
+              This will help us find and update the GP record with their result.<br><br>
+              If they're not registered with a GP in the UK, that's OK. Enter the address and the postcode where they're staying instead.
               {% else %}
-              This will help us find and update your GP record with your test result.
+              <strong>Enter the address that is registered with your GP.</strong><br>
+              This will help us find and update the GP record with your result.<br><br>
+              If you're not registered with a GP in the UK, that's OK. Enter the address and the postcode where you're staying instead.
               {% endif %}
-              <br><br>
-              
-              {% if data['whos-taking-the-test'] == "someone-else" %}
-              If they're not registered with a doctor in the UK, that's OK. Enter the address and postcode where they're staying instead.
-              {% else %}
-              If you're not registered with a doctor in the UK, that's OK. Enter the address and postcode where you're staying instead.
-              {% endif %}
-              
-            </span><br><br>
-    
-            <!-- <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
-              <strong>Postcode</strong><br><br>
-              {{ data['gp-postcode'] | default('LS1 3BE') }}
-              <a href="/antigen/{{version}}/global-registration/address-option-2" class="govuk-!-margin-left-5">
-                <strong>Change</strong>
-                <span class="govuk-visually-hidden">your postcode</span>
-              </a>
-            </p> -->
-
-            <div class="govuk-form-group">
+            </span>
+            <div class="govuk-form-group govuk-!-margin-top-5">
               <label class="govuk-label" for="address-line-1-gp">
                 Building and street <span class="govuk-visually-hidden">line 1 of 2</span>
               </label>
@@ -221,7 +206,7 @@
 
   function submitEvent() {
     var selects = document.getElementById('find-address')
-    // var selectedLink = document.getElementById('manual-address')
+    var selectedLink = document.getElementById('manual-address')
     var selectedLink2 = document.getElementById('manual-address-2')
     selects.addEventListener('click', function (event) {
       event.preventDefault()
@@ -231,14 +216,14 @@
         buttonClicked(selects)
       }
     })
-    // selectedLink.addEventListener('click', function (event) {
-    //   event.preventDefault()
-    //   if (selectedLink.getAttribute('disabled') === 'disabled') {
-    //   } else {
-    //     event.preventDefault()
-    //     buttonClicked2(selectedLink)
-    //   }
-    // })
+    selectedLink.addEventListener('click', function (event) {
+      event.preventDefault()
+      if (selectedLink.getAttribute('disabled') === 'disabled') {
+      } else {
+        event.preventDefault()
+        buttonClicked2(selectedLink)
+      }
+    })
     selectedLink2.addEventListener('click', function (event) {
       event.preventDefault()
       if (selectedLink2.getAttribute('disabled') === 'disabled') {
