--- a/app/views/lfd-home-ordering/v1/order-home-test.html
+++ b/app/views/lfd-home-ordering/v1/order-home-test.html
@@ -168,11 +168,15 @@
                       <li>use their details, including their email address if they have one</li>
                     </ul>
 
-                    <h2 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-4">Booking tests if you’re arriving in England from abroad</h2>
+                    <h2 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-4">Getting tested for travel</h2>
                     <p class="govuk-body">
-                      You cannot use this service to book tests.<br><br>
-                      <a href="https://www.gov.uk/guidance/red-amber-and-green-list-rules-for-entering-england" target="blank" class="govuk-link">Find out what tests you need and how to get them</a>.
+                      You cannot use this service to book tests for travel.<br><br>
+                      Find out what you need to do to:
                     </p>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="https://www.gov.uk/guidance/travel-abroad-from-england-during-coronavirus-covid-19" target="blank" class="govuk-link">travel abroad from England and return</a></li>
+                      <li><a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" target="blank" class="govuk-link">travel to England if you live in another country</a></li>
+                    </ul>
 
                     <h2 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-4">Order rapid lateral flow tests</h2>
                     <p class="govuk-body">
@@ -192,8 +196,8 @@
                       You might be able to:
                     </p>
                     <ul class="govuk-list govuk-list--bullet">
-                      <li>collect tests from a test site</li>
                       <li>collect tests from a pharmacy (in England only)</li>
+                      <li>collect tests from a community centre, such as a library</li>
                       <li>get a test at a site</li>
                       <!-- <li><a href="https://maps.test-and-trace.nhs.uk/" class="govuk-link" target="blank">find a pharmacy where you can collect tests</a></li>
                       <li><a href="https://maps.test-and-trace.nhs.uk/" class="govuk-link" target="blank">find a local site to get tested at</a></li>
