--- a/app/views/litereg-accounts/v3/check-your-answers.html
+++ b/app/views/litereg-accounts/v3/check-your-answers.html
@@ -5,10 +5,7 @@
 
 {% block beforeContent %}
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+<a class="govuk-back-link" href="/litereg-accounts/{{version}}/fingerprick-test">Back</a>
 
 {% endblock %}
 
