--- a/app/views/litereg-accounts/v3/country.html
+++ b/app/views/litereg-accounts/v3/country.html
@@ -23,7 +23,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/litereg-accounts/{{version}}/address" method="post">
+      <form action="/litereg-accounts/{{version}}/home-address" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
