--- a/app/views/litereg-accounts/v3/nhs-number.html
+++ b/app/views/litereg-accounts/v3/nhs-number.html
@@ -23,7 +23,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/litereg-accounts/{{version}}/check-your-answers" method="post">
+      <form action="/litereg-accounts/{{version}}/fingerprick-test" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="nhs-number-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
