--- a/app/views/litereg-accounts/v3/email-address.html
+++ b/app/views/litereg-accounts/v3/email-address.html
@@ -14,7 +14,7 @@
     </span>
   </p>
 </div>
-  <a class="govuk-back-link" href="/litereg-accounts/{{version}}/do-you-have-symptoms">Back</a>
+  <a class="govuk-back-link" href="/litereg-accounts/{{version}}/gp-address-same">Back</a>
 {% endblock %}
 
 {% block content %}
