--- a/app/views/litereg-accounts/v3/index.html
+++ b/app/views/litereg-accounts/v3/index.html
@@ -22,47 +22,62 @@
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">{{ pageTitle }}</h1>
 
-      <p class="govuk-body">Use this service to register a coronavirus (COVID-19) test kit so you can get the test result if:</p>
+      <h2 class="govuk-heading-m">Check if this service is right for you</h2>
+      <p class="govuk-body">Test kit registration is how the NHS matches your contact details to the test kit you used at home or a test site.</p>
+
+      <h3 class="govuk-heading-s">Who should use this service</h3>
+      <p class="govuk-body">Use this service to register a coronavirus (COVID-19) test kit so you can get the test result if any of the following apply:</p>
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
         <li>you were given a Test Registration Card at a test site</li>
         <li>you're doing a rapid lateral flow test at a test site</li>
-        <li>you're taking part in surge testing and you're doing a PCR test</li>
-        <li>you've arrived in the UK after international travel and you're doing a PCR test</li>
+        <li>you're taking part in surge testing and you're doing a PCR test at home or at a surge test site</li>
+        <li>you've entered the UK from another country, and you're doing a PCR test</li>
       </ul>
 
-      <p class="govuk-body">If you are registering a test for more than one person, you need to register each test to get all the results.</p>
+      <h3 class="govuk-heading-s">Who should not use this service</h3>
+      <p class="govuk-body">You need to use a different service if:</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
+        <li>you ordered a PCR test, and you need to <a href="../../antigen/v1/home-testing/" class="govuk-link">register your PCR home test kit</a></li>
+        <li>you did a rapid lateral flow test yourself at home or work, and you need to <a href="../../share-result-lateral-flow/v22/" class="govuk-link">report your test result to the NHS</a></li>
+      </ul>
 
-      <h2 class="govuk-heading-m">Before you start</h2>
-      <p class="govuk-body">You'll need:</p>
+      <h2 class="govuk-heading-m">What you need</h2>
+      <p class="govuk-body">Before you start, you will need:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>the test kit barcode for the test you're registering</li>
-        <li>a mobile phone number (for you or the person you're registering it for)</li>
-        <li>the Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
+        <li>the unique test kit barcode</li>
+        <li>a mobile phone number we can send the result to</li>
+        <li>Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
         <li>the NHS number for each person taking the test (called a CHI number in Scotland and H&C number in Northern Ireland)</li>
       </ul>
 
       <p class="govuk-body govuk-!-margin-bottom-6">
-        The NHS number is optional but helps us quickly save your test result to your GP record.<br><br>
-        In England, entering your NHS number also means your test results can be quickly saved to an ‘NHS COVID Pass’. You may be asked to show your pass to get into some events, or to travel abroad.<br><br>
-        <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>
+        If you are registering a test for more than one person, you need to register each test to get all the results.
       </p>
 
       <h2 class="govuk-heading-m">Get help to register your test kit</h2>
       <p class="govuk-body">
-        If you cannot use the online service, call 119 (free from mobiles and landlines). Lines are open every day, 7am to 11pm. You can get support in 200 languages.<br><br>
+        If you cannot use the online service, call 119 (free from mobiles and landlines). Lines are open every day, 7am to 11pm. 119 provides support in 200 languages.<br><br>
         <a class="govuk-link" href="https://interpreternow.co.uk/nhs119">InterpreterNow</a> is a free online British Sign Language interpreter service for 119.<br><br>
-        If you're blind or partially sighted, you can use the free <a lass="govuk-link" href="https://www.bemyeyes.com/">Be My Eyes app</a> to get help with registering. Download the app and go to the 'Specialist Help' section.
+        You can use the free <a lass="govuk-link" href="https://www.bemyeyes.com/">Be My Eyes app</a> to get help from trained NHS Test and Trace staff. Download the app, go to 'Specialized Help' and select NHS Test & Trace in the 'Personal Health' category.
       </p>
 
       <a href="/litereg-accounts/{{version}}/whos-taking-the-test" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-        Register your test
+        Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
       </a>
 
-      <h2 class="govuk-heading-m">How we use your data</h2>
-      <p class="govuk-body">To find out how we use your personal data when you register for a coronavirus test, <a class="govuk-link" href="#">read the coronavirus privacy note.</a></p>
+      <h2 class="govuk-heading-m">Advice about getting tested in the UK</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/" class="govuk-link">England - NHS.UK: Testing for coronavirus</a></li>
+        <li><a href="https://www.nhsinform.scot/illnesses-and-conditions/infections-and-poisoning/coronavirus-covid-19/test-and-protect/coronavirus-covid-19-testing" class="govuk-link">Scotland – NHS Inform: COVID-19 testing</a></li>
+        <li><a href="https://gov.wales/getting-tested-coronavirus-covid-19" class="govuk-link">Wales – Welsh Government: getting tested for COVID-19</a></li>
+        <li><a href="https://www.nidirect.gov.uk/campaigns/coronavirus-covid-19" class="govuk-link">Northern Ireland – nidirect: COVID-19</a></li>
+      </ul>
+
+      <!-- <h2 class="govuk-heading-m">How we use your data</h2>
+      <p class="govuk-body">To find out how we use your personal data when you register for a coronavirus test, <a class="govuk-link" href="#">read the coronavirus privacy note.</a></p> -->
 
     </div>
   </div>
