--- a/app/views/litereg-accounts/v3/nhs-number-known.html
+++ b/app/views/litereg-accounts/v3/nhs-number-known.html
@@ -27,7 +27,7 @@
       <form action="/litereg-accounts/{{version}}/action9/nhs-number-known" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="nhs-number-known-hint">
+          <fieldset class="govuk-fieldset" aria-describedby="nhs-number-known-hint nhs-number-known-hint-2 nhs-number-known-hint-3 nhs-number-known-hint-4">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
                 {% if data['whos-taking-the-test'] == "someone-else" %}
@@ -41,29 +41,48 @@
             <span id="nhs-number-known-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
               <span id="nhs-number-known-hint" class="govuk-body">
-                <strong>This number helps us quickly:</strong><br>
+                <strong>This number helps us quickly save your test result to their:</strong><br>
                 <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
-                  <li><strong>save their test result to their GP record</strong></li>
-                  <li><strong>make their results available</strong> if they need to prove they do not have COVID-19</li>
+                  <li><strong>GP record</strong></li>
+                  <li><strong>NHS COVID Pass</strong> - In England, they may be asked to show this pass to get into some events, or to travel abroad</li>
                 </ul>
-                It's OK if you do not have it, you can still continue. But not providing your NHS number could cause delays if they wish to attend certain events.<br><br>
               </span>
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  Not providing their NHS number could cause delays if they wish to attend certain events.
+                </strong>
+              </div>
               {% else %}
-              <span id="nhs-number-known-hint" class="govuk-body">
-                <strong>This number helps us quickly:</strong><br>
+              <span id="nhs-number-known-hint-2" class="govuk-body">
+                <strong>This number helps us quickly save your test result to your:</strong><br>
                 <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
-                  <li><strong>save your test result to your GP record</strong></li>
-                  <li><strong>make your results available</strong> if you need to prove you do not have COVID-19</li>
+                  <li><strong>GP record</strong></li>
+                  <li><strong>NHS COVID Pass</strong> - In England, you may be asked to show this pass to get into some events, or to travel abroad</li>
                 </ul>
-                It's OK if you do not have it, you can still continue. But not providing your NHS number could cause delays if you wish to attend certain events.<br><br>
               </span>
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  Not providing your NHS number could cause delays if you wish to attend certain events.
+                </strong>
+              </div>
               {% endif %}
-              <strong>What it looks like</strong><br><br>
-                It's 10 digits long, and usually on perscriptions or a hospital or GP letter.<br><br>
-                In Scotland, it's known as a CHI number, in Northern Ireland, it's known as an H&C number.<br><br>
-                <a href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/" target="blank">How to find an NHS number</a><br><br>
-            </span>
-            <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+
+              <span id="nhs-number-known-hint-3" class="govuk-body">
+                {% if data['whos-taking-the-test'] == "someone-else" %}
+                <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/" target="blank">Look up their NHS number</a>.
+                {% else %}
+                <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/" target="blank">Look up your NHS number</a>.
+                {% endif %}
+                <br><br>
+                It's OK if you do not have it, you can still continue.
+              </span>
+       
+                
+            <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-7 govuk-!-margin-bottom-7" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="nhs-number-known-1" name="nhs-number-known" type="radio" value="Yes" {{ checked("nhs-number-known", "Yes") }}>
                   <label class="govuk-label govuk-radios__label" for="nhs-number-known-1">
@@ -85,6 +104,13 @@
                   </label>
                 </div>
               </div>
+
+              <span id="nhs-number-known-hint-4" class="govuk-body">
+                <strong>What it looks like</strong><br><br>
+                An NHS number is 10 digits. It will be on any prescriptions or letters from a GP or hospital.<br><br>
+                In Scotland, it’s known as a CHI number. In Northern Ireland, it’s known as an H&C number.
+              </span>
+
           </fieldset>
         </div>
 
