--- a/app/views/litereg-accounts/v3/index.html
+++ b/app/views/litereg-accounts/v3/index.html
@@ -51,6 +51,12 @@
       </ul>
 
       <p class="govuk-body govuk-!-margin-bottom-6">
+        The NHS number is optional but helps us quickly save your test result to your GP record.<br><br>
+        In England, entering your NHS number also means your test results can be quickly saved to an ‘NHS COVID Pass’. You may be asked to show your pass to get into some events, or to travel abroad.<br><br>
+        <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>
+      </p>
+
+      <p class="govuk-body govuk-!-margin-bottom-6">
         If you are registering a test for more than one person, you need to register each test to get all the results.
       </p>
 
