--- a/app/views/litereg-accounts/v1/index.html
+++ b/app/views/litereg-accounts/v1/index.html
@@ -33,9 +33,9 @@
         <li>the Royal Mail barcode on the return box (only if you're registering a home test kit)</li>
       </ul>
 
-      <p class="govuk-body"><strong>If you’re taking a test before your hospital visit</strong>, you need to <a href="#">register your kit here</a>.</p>
+      <!-- <p class="govuk-body"><strong>If you’re taking a test before your hospital visit</strong>, you need to <a href="#">register your kit here</a>.</p> -->
 
-      <a href="/litereg-accounts/v1/whos-taking-the-test" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+      <a href="/litereg-accounts/v1/whos-taking-the-test" role="button" draggable="false" class="govuk-button govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
