--- a/app/views/antigen/v2/global-registration/fingerprick-test.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test.html
@@ -30,13 +30,13 @@
             </legend>
             <span id="fingerprick-test-hint" class="govuk-body">
               The antibody tests will help the NHS learn how likely people are to get COVID-19 a second time or after a vaccination, and the impact of variants.<br><br>
-              If they agree to antibody testing, they will:<br><br>
+              If they agree to antibody testing and they test positive for COVID-19, they may be sent antibody tests.<br><br>
+              If they are sent antibody tests, they will:<br><br>
               <ul class="govuk-list govuk-list--bullet">
-                <li>only be sent an antibody test if they test positive for COVID-19</li>
                 <li>be posted 2 antibody tests 3 weeks apart to their home address</li>
-                <li>do a fingerprick blood test on themselves at home</li>
-                <li>need to post back the completed antibody test</li>
-                <li>get the test result sent to them</li>
+                <li>do a fingerprick blood test on themselves at home each time</li>
+                <li>need to post back the completed antibody tests</li>
+                <li>get the test results sent to them</li>
               </ul>
             </span>
 
