--- a/app/views/litereg-accounts/v3/home-address.html
+++ b/app/views/litereg-accounts/v3/home-address.html
@@ -41,9 +41,9 @@
 
             <span id="post-code-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
-              If they do not have a home address in the UK, enter the postcode where they're staying.
+              If they do not have a home address in the UK, use the address where they're staying.
               {% else %}
-              If you do not have a home address in the UK, enter the postcode where you're staying.
+              If you do not have a home address in the UK, use the address where you're staying.
               {% endif %}
             </span>
             <div class="govuk-form-group govuk-!-margin-top-6">
@@ -71,9 +71,9 @@
 
             <span id="post-code-hint" class="govuk-body">
               {% if data['whos-taking-the-test'] == "someone-else" %}
-              If they do not have a home address in the UK, select the address where they're staying.
+              If they do not have a home address in the UK, use the address where they're staying.
               {% else %}
-              If you do not have a home address in the UK, select the address where you're staying.
+              If you do not have a home address in the UK, use the address where you're staying.
               {% endif %}
             </span>
             <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
