--- a/app/views/share-result-lateral-flow/v25-1/country.html
+++ b/app/views/share-result-lateral-flow/v25-1/country.html
@@ -34,7 +34,7 @@
 
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input checked class="govuk-radios__input" id="residence-country-1" name="residence-country" type="radio" value="England" {{ checked("residence-country", "England") }}>
+                <input class="govuk-radios__input" id="residence-country-1" name="residence-country" type="radio" value="England" {{ checked("residence-country", "England") }}>
                 <label class="govuk-label govuk-radios__label" for="residence-country-1">
                   England
                 </label>
