--- a/app/views/share-result-lateral-flow/v25/account-details-from-nhs-account.html
+++ b/app/views/share-result-lateral-flow/v25/account-details-from-nhs-account.html
@@ -102,33 +102,17 @@
           </dd>
         </div>
 
-        {% if data['email'] == "Yes" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Email
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['email-address'] or 'psmith@example.com' }}
+            {{ data['email-address'] or 'Pete.Smith@exampleemail.com' }}
           </dd>
           <dd class="govuk-summary-list__actions">
           </dd>
         </div>
-        {% elseif data['email'] !== "Yes" %}
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Email
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {% if data['whos-taking-the-test'] == "someone-else" %}
-            They do not have an email address
-            {% else %}
-            I do not have an email address
-            {% endif %}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-          </dd>
-        </div>
-        {% endif %}
+
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Mobile
