--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1,6 +1,5 @@
 // global styles for <a> and <p> tags
 $govuk-global-styles: true;
-$govuk-new-link-styles: true;
 
 // We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
 $govuk-assets-path: '/govuk/assets/';
@@ -14,6 +13,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/step-by-step-related";
 @import "patterns/task-list";
 @import "patterns/related-items";
+@import "patterns/bulk-upload";
 
 // Components that aren't in Frontend
 @import "components/cookie-banner";
@@ -41,14 +41,6 @@ $govuk-assets-path: '/govuk/assets/';
   border: 1px solid #d7dde0;
   padding: 1rem;
   cursor: pointer
-}
-
-.email-header {
-  display: flex;
-  justify-content: center;
-  img {
-    width: 100%;
-  }
 }
 
 .govuk-notification-banner {
@@ -495,7 +487,7 @@ a.card__body {
   width: 250px;
   height: 200px;
   a {
-    width: 100%; 
+    width: 100%;
     height: 100%;
   }
 }
@@ -513,6 +505,14 @@ a.card__body {
   border: 1px solid #d7dde0;
   padding: 1rem;
   cursor: pointer
+}
+
+.email-header {
+  display: flex;
+  justify-content: center;
+  img {
+    width: 100%;
+  }
 }
 
 .scan-barcode {
@@ -555,6 +555,10 @@ a.card__body {
 }
 .mobile-center img {
   width: 40%;
+}
+
+.inline-button-wrapper {
+  display: block;
 }
 
 @media (min-width: 40.0625em) {
@@ -606,6 +610,12 @@ a.card__body {
     display: flex;
     align-items: end;
     justify-content: space-between;
+  }
+  .inline-button-wrapper.help-text {
+    align-items: center;
+  }
+  .inline-button-wrapper.help-text p {
+    margin-bottom: 0;
   }
   .inline-button-wrapper a {
     margin: 5px !important;
@@ -885,7 +895,6 @@ a.card__body {
   // }
 
 
-
 @media screen and (max-width:601px) {
 	table.mobile-optimised {
 		word-wrap:break-word;
@@ -929,7 +938,7 @@ a.card__body {
   }
 }
 
-  //Share results
+//Share results
 @media (min-width: 48.0625em) {
   .column-width-title {
     width:300px;
@@ -973,5 +982,18 @@ a.card__body {
     position: absolute;
     bottom: 0px;
     left: 35%;
+  }
+}
+
+// camera
+
+
+.camera-test-result {
+  width: 100%;
+}
+
+@media (min-width: 48.0625em) {
+  .camera-test-result {
+    width: 500px;
   }
 }
