--- a/app/views/antigen/v2/refer-and-triage/postcode.html
+++ b/app/views/antigen/v2/refer-and-triage/postcode.html
@@ -32,7 +32,7 @@
               {{ pageTitle }}
             </h1>
           </legend>
-          <span id="postcode-hint">
+          <span id="postcode-hint" class="govuk-body">
             This is so we can show test site options near you. You can still order a home test if you prefer.
           </span>
           <div class="govuk-form-group govuk-!-margin-top-5">
