--- a/app/views/antigen/v2/global-registration/home-address.html
+++ b/app/views/antigen/v2/global-registration/home-address.html
@@ -47,6 +47,18 @@
               <a class="govuk-link govuk-!-font-size-19" id="manual-address" role="button" href="#">Enter address manually</a>
             </p>
             <button id="find-address" class="govuk-button" type="submit" data-module="govuk-button">Find address</button>
+
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  If you do not have a fixed address
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                You can use the postcode of a nearby reference address, such as your GP.<br><br>
+                You can also call 119 (free from mobiles and landlines) - lines are open 7am to 11pm.
+              </div>
+            </details>
           </div>
 
           <div id="content-2" style="display: none;">
