--- a/app/views/antigen/v2/refer-and-triage/postcode.html
+++ b/app/views/antigen/v2/refer-and-triage/postcode.html
@@ -45,6 +45,18 @@
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              If you do not have a fixed address
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            You can use the postcode of a nearby reference address, such as your GP.<br><br>
+            You can also call 119 (free from mobiles and landlines) - lines are open 7am to 11pm.
+          </div>
+        </details>
+
       </form>
 
     </div>
