--- a/app/views/antigen/v2/alternative-screens/scan-test-result.html
+++ b/app/views/antigen/v2/alternative-screens/scan-test-result.html
@@ -1,47 +1,32 @@
 {% set version = "v2" %}
-{% set pageTitle = "Scan your test result" %}
+{% set pageTitle = "Take a photo of your test strip" %}
 
 {% extends "includes/layout.html" %}
-
-{% block beforeContent %}
-<div class="govuk-phase-banner">
-  <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag govuk-phase-banner__content__tag">
-      alpha
-    </strong>
-    <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
-  </p>
-</div>
-
-  <a class="govuk-back-link" href="/antigen/{{version}}/home-testing/enter-barcode-number">Back</a>
-{% endblock %}
 
 {% block content %}
   {% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-  
+<!--   
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">{{ pageTitle }}</h1>
-        <p class="govuk-body">Position the barcode so it fits inside the square on your mobile or computer's camera.</p>
+        <p class="govuk-body">Position the barcode so it fits inside the square on your mobile or computer's camera.</p> -->
 
-        <!-- <div>
-          <img src="/public/images/camera-view.png" alt="camera view"/>
-        </div> -->
-
-
-        <div style="position: relative; transform: scaleX(-1); display: flex; justify-content: center; align-items: center;" class="camera-test-result">
-          <div style="border: dashed white 2px; width: 15%; height: 76%; position: absolute;"></div>
-          <div style="border: dashed white 2px; width: 7%; height: 17%; position: absolute; margin-top: -10px"></div>
-          <video id="video" class="camera-test-result" autoplay></video>
+        <div style="position: relative; display: flex; justify-content: center; align-items: center;" class="camera-test-result wrapper govuk-!-margin-bottom-3">
+          <div style="border: dashed white 2px; width: 94px; height: 354px; position: absolute;"></div>
+          <div style="border: dashed white 2px; width: 38px; height: 80px; position: absolute; margin-top: -46px"></div>
+          <div class="camera-overlay right"></div>
+          <div class="camera-overlay left"></div>
+          <div class="camera-overlay top"></div>
+          <div class="camera-overlay bottom"></div>
+          <video id="video" class="camera-test-result" autoplay capture="environment"></video>
         </div>
-        <br><br>
-        <!-- <button id="snap">Snap Photo</button> -->
-        <!-- <canvas id="canvas" class="camera-test-result"></canvas> -->
         
-        <a href="/antigen/{{version}}/home-testing/enter-barcode-number" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
+        <a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-bottom-2" data-module="govuk-button" style="display: inline-block;">
+          Take photo
+        </a>
+
+        <a href="/antigen/{{version}}/home-testing/enter-barcode-number" role="button" draggable="false" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-8" data-module="govuk-button" style="display: inline-block;">
           Cancel
         </a>
   
@@ -49,21 +34,43 @@
   </div>
 
   <script type="text/javascript">
+
+// var constraintsObject = { facingMode: constraint };
+
+// constraintsObject.facingMode = constraint;
+
+// var constraints = {
+//   facingMode: { exact: "user" }
+// };
   
 
 // Grab elements, create settings, etc.
 var video = document.getElementById('video');
 
 // Get access to the camera!
+// if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+//     // Not adding `{ audio: true }` since we only want video now
+//     navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
+//         //video.src = window.URL.createObjectURL(stream);
+//         video.srcObject = stream;
+//         video.play();
+//     });
+// }
+
 if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-    // Not adding `{ audio: true }` since we only want video now
-    navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
-        //video.src = window.URL.createObjectURL(stream);
+navigator.mediaDevices.getUserMedia({
+  audio: false,
+  video: {
+    facingMode: 'environment'
+  }
+})
+.then(function(stream) {
+        // video.src = window.URL.createObjectURL(stream);
         video.srcObject = stream;
         video.play();
-    });
+    })
+.catch(console.error);
 }
-
   </script>
 
 {% endblock %}
