--- a/app/views/antigen/v1/refer-and-triage/postcode.html
+++ b/app/views/antigen/v1/refer-and-triage/postcode.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Enter a postcode" %}
+{% set pageTitle = "Enter a postcode to find test sites near you" %}
 
 {% extends "includes/layout.html" %}
 
@@ -32,9 +32,6 @@
               {{ pageTitle }}
             </h1>
           </legend>
-          <span id="post-code-hint" class="govuk-body">
-            Enter a postcode to find out how to get a test near you.
-          </span>
           <div class="govuk-form-group govuk-!-margin-top-5">
             <label class="govuk-label" for="home-postcode">
               Postcode
