--- a/app/views/antigen/v1/order-home-test-kit/confirm-email-code.html
+++ b/app/views/antigen/v1/order-home-test-kit/confirm-email-code.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Check your email address" %}
+{% set pageTitle = "Enter your email confirmation code" %}
 
 {% extends "includes/layout.html" %}
 
